<resources>
    <string name="app_name">Choloc</string>
    <string name="hello">AndroidIM</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="chatroom">ChatRoom</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="login">Login</string>
    <string name="lupapass">lupa password?</string>
    <string name="createnew">create new account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Signup</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="repass">re-type password</string>
    <string name="mobnum">mobile number</string>
    <string name="agree">I want to create new account in Choloc</string>
    <string name="signup">signup</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_chatlist">Chatlist</string>
    <string name="chat">Chat</string>
    <string name="friend">Friend</string>
    <string name="maps">Maps</string>
    <string name="profile">Profile</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="save">save</string>
    <string name="oldpass">old password</string>
    <string name="newpass">new password</string>
    <string name="renewpass">re-type new password</string>
    <string name="title_activity_new_password">New Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_section1">Langkah 1</string>
    <string name="title_section2">Langkah 2</string>
    <string name="title_section3">Langkah 3</string>
    <string name="title_section4">Langkah 4</string>
    <string name="title_section5">Langkah 5</string>
    <string name="title_section6">Langkah 6</string>
    <string name="desc_gedungsate">Gedung ini adalah sebuah bangunan bersejarah yang ada di pusat kota Bandung. Disebut sebagai Gedung Sate karena gedung ini mempunyai ciri khas yang unik, yaitu ornamen 6 tusuk sate yang ada di atas menara sentral. 6 tusuk sate ini melambangkan 6 juta Gulden yang dipakai untuk membangun gedung berwarna putih ini pada masanya. Gedung ini sangat terkenal tidak hanya di kota Bandung saja, melainkan juga sudah terkenal di Jawa Barat dan Indonesia.</string>
    <string name="desc_tsm">Bandung sudah menjadi tempat tujuan wisata utama bagi keluarga karena selain dekat dengan Jakarta, Bandung juga mempunyai berbagai jenis tempat wisata yang sangat cocok untuk kegiatan wisata keluarga yang mempunyai anak kecil. Tempat wisata di Bandung sangatlah banyak, namun tempat wisata yang paling menyenangkan dan cocok untuk segala usia adalah Trans Studio Bandung, sebuah indoor theme park terbesar tidak hanya di Indonesia, namun juga terbesar di dunia. Karena berada dalam ruangan, Anda tidak perlu kuatir akan kepanasan atau kehujanan seperti bila Anda pergi ke taman bermain lainnya. Namun walau begitu, jangan lupa membawa pakaian ganti karena walau berada dalam ruangan, Trans Studio Bandung juga memiliki wahana permainan air yang akan membuat Anda basah.</string>
    <string name="desc_kawahputih">Kawah Putih adalah tempat wisata di Bandung yang paling terkenal. Berlokasi di Ciwidey, Jawa Barat, kurang lebih sekitar 50 KM arah selatan kota Bandung, Kawah Putih adalah sebuah danau yang terbentuk akibat dari letusan Gunung Patuha. Sesuai dengan namanya, tanah yang ada di kawasan ini berwarna putih akibat dari pencampuran unsur belerang. Selain tanahnya yang berwarna putih, air danau kawasan Kawah Putih juga mempunyai warna yang putih kehijauan dan dapat berubah warna sesuai dengan kadar belerang yang terkandung, suhu, dan cuaca.</string>
    <string name="desc_situpatengan">Nama Situ Patenggang berasal dari bahasa Sunda yaitu ‘situ’ yang berarti danau, dan ‘pateangan-teangan’ yang berarti saling mencari. Ada sebuah mitos tentang Situ Patenggang yang menceritakan tentang cinta Ki Santang dan Dewi Rengganis yang terpisah sangat lama. Karena cinta mereka yang sangat dalam, mereka berdua saling mencari sampai pada akhirnya bertemu di suatu tempat yang sekarang disebut sebagai ‘Batu Cinta’. Setelah bertemu kembali, Dewi Rengganis meminta dibuatkan danau dan perahu supaya mereka dapat berlayar bersama.</string>
    <string name="desc_situgede">Lokasi obyek wisata ini berjarak kurang lebih sekitar 10 km jika dari pusat Kota Bogor, atau berjarak sekitar 3 km di sebelah utara Terminal Bubulak. Situ Gede sebenarnya berdekatan, atau masih berada dalam satu lingkungan, dengan beberapa situ lain yang ada di dekatnya. Yaitu seperti Situ Leutik (yang sekarang sudah hilang), Situ Panjang, dan juga Situ Burung. Yang terakhir ini lokasinya berada di Desa Cikarawang, Kec. Dramaga, Kab. Bogor.</string>
    <string name="desc_kebunrayabgr">Disini kita dapat memandang kawasan hijau yang menenangkan yang jarang kita temui di kota-kota besar. Suara burung yang bernyanyi dapat pula kita dengarkan. Untuk menambah kecantikannya, terdapat pula kolam-kolam dengan pancuran air, sehingga kita dapat mendengar suara gemericik air. Bagi Anda yang membawa anak-anak, tempat ini sangat cocok karena ada banyak taman-taman yang luas sehingga putra putri Anda dapat leluasa bermain. Misalnya taman dekat kolam teratai yang merupakan tempat favorit bagi para keluarga untuk bermain dengan anak mereka. Ada pula jalan yang menyerupai koridor panjang dengan pohon-pohon besar di sisi kiri dan kanan. Kursi-kursi yang ada di antara pohon tersebut menjadi tempat yang nyaman setelah berjalan mengelilingi kawasan ini.</string>
    <string name="desc_mekarsari">Nama Mekarsari di Bogor memang tidak setenar kebun raya Bogor dikarenakan dua hal. Kebun raya Bogor telah ada sejak jaman penjajahan Belanda dan lokasinya di pusat kota sehingga mudah diakses oleh wisatawan. Adapun Mekarsari, lokasinya tergolong masih relative di pedalaman tepatnya di kabupaten Bogor, jalan Cilengsi-Jonggol Km 3. Taman Buah Mekarsari merupakan salah satu pusat pelestarian keanekaragaman hayati buah-buahan tropika terbesar didunia, khususnya jenis buah-buahan unggul yang dikumpulkan dari seluruh Indonesia, sekaligus merupakan tempat penelitian budidaya (agronomi), pemuliaan (breeding) dan perbanyakan bibit unggul untuk kemudian disebarluaskan kepada petani dan masyarakat</string>
    <string name="desc_tamansafari">Taman Safari Bogor,Jawa Barat merupakan salahsatu dari sekian banyaknya tempat wisata yang populer di Indonesia.Taman Safari Indonesia Cisarua terletak di Desa Cibeureum Kecamatan Cisarua. TSI Cisarua merupakan wahana rekreasi yang sangat menarik untuk dikunjungi sekeluarga. Taman Safari Indonesia I dibangun pada tahun 1980 pada sebuah perkebunan teh yang sudah tidak produktif. Taman Safari Indonesia Cisarua menjadi penyangga Taman Nasional Gunung Gede Pangrango. Taman Safari Indonesia I ini terletak di ketinggian 900-1800 meter di atas permukaan laut (dpl) dan mempunyai suhu rata-rata 16 – 24 derajat Celsius.</string>
    <string name="desc_banyupanas">Banyu Panas Palimanan merupakan salah satu tempat wisata di Cirebon yang banyak dikunjungi setiap harinya terutama pada saat akhir pekan. Taman pemandian ini berada di Desa Palimanan Barat, Kecamatan Palimanan, Cirebon. Dari pusat kota Cirebon, tempat wisata ini bisa ditempuh dalam waktu 25 – 30 menit perjalanan. Air di taman pemandian ini adalah sumber air panas alami yang mengandung belerang dan dipercaya bisa menyembuhkan berbagai penyakit kulit. Di sekitar lokasi pemandian terdapat banyak gazebo untuk beristirahat.</string>
    <string name="desc_kratonkasepuhan">Keraton Kasepuhan Cirebon didirikan oleh Pangeran Cakrabuana pada masa perkembangan islam atau sekitar tahun 1529. Pada awal dibangunnya Keraton Kasepuhan merupakan perluasan dari Keraton Pakungwati yang merupakan keraton tertua di Cirebon. Keraton Pakungwati yang terletak di sebalah timur Keraton Kasepuhan, dibangun oleh Pangeran Cakrabuana (Putera Raja Pajajaran) pada tahun 1452, bersamaan dengan pembangunan Tajug Pejlagrahan yang berada di sebelah timurnya. Keraton Kasepuhan adalah keraton termegah dan paling terawat di Cirebon. Makna di setiap sudut arsitektur keraton ini pun terkenal paling bersejarah. Halaman depan keraton ini dikelilingi tembok bata merah dan terdapat pendopo didalamnya.</string>
    <string name="desc_pantaikejawan">Obyek wisata yang ditata apik walau terkesan sederhana ini sering didatangi masyarakat menjelang sore hari. Lokasi pantai ini cukup dekat dengan Waterland Cirebon, yaitu Ade Irma Suryani. Biasanya pengunjung menyewa perahu karet yang tersedia di wilayah ini dengan tarif Rp. 20.000. Jika anda ingin melepas penat sambil merasakan desiran angin pantai yang lembut menerpa wajah, Pantai Kejawanan adalah salah satu tempat yang direkomendasikan.</string>
    <string name="desc_adeirma">Taman Ade Irma Suryani Nasution merupakan taman rekreasi terbesar yang ada di kota ini. Pada awalnya, taman ini bernama Traffic Garden Cirebon dan menjadi tempat wisata di Cirebon yang paling banyak dikunjungi. Pada tahun 1966, taman ini berubah nama menjadi Taman Ade Irma Nasution. Tempat wisata ini cocok sekali dikunjungi bersama keluarga. Di sini, ada tempat bermain anak dan kebun binatang mini. Karena lokasinya yang berdekatan dengan pelabuhan Cirebon, Anda juga bisa menikmati keindahan pantai. Selain itu, ada pertunjukan musik dan seni yang rutin diadakan setiap hari Minggu dan hari libur nasional di panggung yang telah disediakan.</string>
    <string name="desc_buniayu">Goa Buniayu adalah tempat wisata di Sukabumi yang paling menghabiskan tenaga. Kenapa begitu? Goa Buniayu adalah goa yang besar dan dalam, untuk dapat menikmati seluruh tantangannya, anda akan membutuhkan badan yang sehat dan kuat. Dengan lama perjalanan dalam goa sekitar 5 jam, tenaga anda akan terkuras habis karena medan yang ditempuh tidak hanya berupa jalan lurus saja, melainkan melewati danau lumpur, berpegangan pada pinggir tebing, memanjat tebing, melewati tumpukan batu, dan lain-lain. Selama perjalanan dalam goa, anda akan dapat menikmati pemandangan yang tidak dapat anda jumpai di permukaan bumi, sehingga akan menjadi pengalaman yang tak terlupakan. Ingat, hanya yang berbadan sehat saja yang dapat menaklukan tantangan Goa Buniayu!</string>
</resources>